@@ -1239,10 +1239,12 @@ name|Analyzer
 name|analyzer
 parameter_list|)
 block|{
+try|try
+block|{
 return|return
 name|analyzer
 operator|.
-name|tokenStream
+name|reusableTokenStream
 argument_list|(
 name|field
 argument_list|,
@@ -1253,6 +1255,21 @@ name|contents
 argument_list|)
 argument_list|)
 return|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|ex
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+name|ex
+argument_list|)
+throw|;
+block|}
 block|}
 block|}
 end_class
