@@ -3022,7 +3022,7 @@ name|tokenStream
 operator|=
 name|analyzer
 operator|.
-name|tokenStream
+name|reusableTokenStream
 argument_list|(
 name|field
 operator|.
