@@ -857,10 +857,14 @@ argument_list|)
 throw|;
 name|TokenStream
 name|stream
-init|=
+decl_stmt|;
+try|try
+block|{
+name|stream
+operator|=
 name|analyzer
 operator|.
-name|tokenStream
+name|reusableTokenStream
 argument_list|(
 name|fieldName
 argument_list|,
@@ -870,7 +874,22 @@ argument_list|(
 name|text
 argument_list|)
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|ex
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+name|ex
+argument_list|)
+throw|;
+block|}
 name|addField
 argument_list|(
 name|fieldName
