@@ -394,11 +394,20 @@ block|}
 comment|// get Analyzer from superclass and tokenize the term
 name|TokenStream
 name|source
+decl_stmt|;
+name|int
+name|countTokens
 init|=
+literal|0
+decl_stmt|;
+try|try
+block|{
+name|source
+operator|=
 name|getAnalyzer
 argument_list|()
 operator|.
-name|tokenStream
+name|reusableTokenStream
 argument_list|(
 name|field
 argument_list|,
@@ -408,26 +417,7 @@ argument_list|(
 name|termStr
 argument_list|)
 argument_list|)
-decl_stmt|;
-name|CharTermAttribute
-name|termAtt
-init|=
-name|source
-operator|.
-name|addAttribute
-argument_list|(
-name|CharTermAttribute
-operator|.
-name|class
-argument_list|)
-decl_stmt|;
-name|int
-name|countTokens
-init|=
-literal|0
-decl_stmt|;
-try|try
-block|{
+expr_stmt|;
 name|source
 operator|.
 name|reset
@@ -448,6 +438,18 @@ name|e1
 argument_list|)
 throw|;
 block|}
+name|CharTermAttribute
+name|termAtt
+init|=
+name|source
+operator|.
+name|addAttribute
+argument_list|(
+name|CharTermAttribute
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 while|while
 condition|(
 literal|true
@@ -748,20 +750,6 @@ block|{
 comment|// get Analyzer from superclass and tokenize the term
 name|TokenStream
 name|source
-init|=
-name|getAnalyzer
-argument_list|()
-operator|.
-name|tokenStream
-argument_list|(
-name|field
-argument_list|,
-operator|new
-name|StringReader
-argument_list|(
-name|termStr
-argument_list|)
-argument_list|)
 decl_stmt|;
 name|List
 argument_list|<
@@ -776,20 +764,24 @@ name|String
 argument_list|>
 argument_list|()
 decl_stmt|;
-name|CharTermAttribute
-name|termAtt
-init|=
-name|source
-operator|.
-name|addAttribute
-argument_list|(
-name|CharTermAttribute
-operator|.
-name|class
-argument_list|)
-decl_stmt|;
 try|try
 block|{
+name|source
+operator|=
+name|getAnalyzer
+argument_list|()
+operator|.
+name|reusableTokenStream
+argument_list|(
+name|field
+argument_list|,
+operator|new
+name|StringReader
+argument_list|(
+name|termStr
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|source
 operator|.
 name|reset
@@ -810,6 +802,18 @@ name|e1
 argument_list|)
 throw|;
 block|}
+name|CharTermAttribute
+name|termAtt
+init|=
+name|source
+operator|.
+name|addAttribute
+argument_list|(
+name|CharTermAttribute
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 while|while
 condition|(
 literal|true
@@ -948,31 +952,7 @@ comment|// get Analyzer from superclass and tokenize the term
 name|TokenStream
 name|source
 init|=
-name|getAnalyzer
-argument_list|()
-operator|.
-name|tokenStream
-argument_list|(
-name|field
-argument_list|,
-operator|new
-name|StringReader
-argument_list|(
-name|termStr
-argument_list|)
-argument_list|)
-decl_stmt|;
-name|CharTermAttribute
-name|termAtt
-init|=
-name|source
-operator|.
-name|addAttribute
-argument_list|(
-name|CharTermAttribute
-operator|.
-name|class
-argument_list|)
+literal|null
 decl_stmt|;
 name|String
 name|nextToken
@@ -986,6 +966,34 @@ literal|false
 decl_stmt|;
 try|try
 block|{
+name|source
+operator|=
+name|getAnalyzer
+argument_list|()
+operator|.
+name|reusableTokenStream
+argument_list|(
+name|field
+argument_list|,
+operator|new
+name|StringReader
+argument_list|(
+name|termStr
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|CharTermAttribute
+name|termAtt
+init|=
+name|source
+operator|.
+name|addAttribute
+argument_list|(
+name|CharTermAttribute
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 name|source
 operator|.
 name|reset
@@ -1146,7 +1154,7 @@ operator|=
 name|getAnalyzer
 argument_list|()
 operator|.
-name|tokenStream
+name|reusableTokenStream
 argument_list|(
 name|field
 argument_list|,
@@ -1259,13 +1267,15 @@ operator|!=
 literal|null
 condition|)
 block|{
+try|try
+block|{
 comment|// part2
 name|source
 operator|=
 name|getAnalyzer
 argument_list|()
 operator|.
-name|tokenStream
+name|reusableTokenStream
 argument_list|(
 name|field
 argument_list|,
@@ -1287,8 +1297,6 @@ operator|.
 name|class
 argument_list|)
 expr_stmt|;
-try|try
-block|{
 name|source
 operator|.
 name|reset
