@@ -625,12 +625,16 @@ argument_list|()
 decl_stmt|;
 name|TokenStream
 name|source
-init|=
+decl_stmt|;
+try|try
+block|{
+name|source
+operator|=
 name|this
 operator|.
 name|analyzer
 operator|.
-name|tokenStream
+name|reusableTokenStream
 argument_list|(
 name|field
 argument_list|,
@@ -640,9 +644,7 @@ argument_list|(
 name|text
 argument_list|)
 argument_list|)
-decl_stmt|;
-try|try
-block|{
+expr_stmt|;
 name|source
 operator|.
 name|reset
