@@ -238,10 +238,14 @@ condition|)
 block|{
 name|TokenStream
 name|stream
-init|=
+decl_stmt|;
+try|try
+block|{
+name|stream
+operator|=
 name|analyzer
 operator|.
-name|tokenStream
+name|reusableTokenStream
 argument_list|(
 literal|""
 argument_list|,
@@ -251,7 +255,19 @@ argument_list|(
 name|queryString
 argument_list|)
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e1
+parameter_list|)
+block|{
+name|stream
+operator|=
+literal|null
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|stream
